force-app/main/default/objects/Parker_Pen__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>