force-app/main/default/objects/Parker_Pen__c/validationRules/Test_Picklist_and_Text.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Picklist_and_Text</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Test_Picklist__c ,&apos;Yes&apos;),ISBLANK( Test_Text__c ))</errorConditionFormula>
    <errorDisplayField>Test_Text__c</errorDisplayField>
    <errorMessage>PLEASE SELECT OTHER OPTION</errorMessage>
</ValidationRule>